@@ -10,6 +10,7 @@ version 0.28:
 
 	Improvements:
 	- find virtual-host handler for '/'.
+	- run(new_connection) with method name
 
 version 0.27: Sun  4 Mar 12:26:01 CET 2018
 
